<resources>
    <string name="app_name">TravelGuideApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image">image</string>
    <string name="where_s_your_next_destination">Where’s your\nnext destination?</string>
    <string name="deals">DEALS</string>
    <string name="imagebutton">imagebutton</string>
    <string name="flights">Flights</string>
    <string name="hotels">Hotels</string>
    <string name="cars">Cars</string>
    <string name="taxi">Taxi</string>
    <string name="all">All</string>
    <string name="transportation">Transportation</string>
    <string name="search">Search</string>
    <string name="where_next">Where next?</string>
    <string name="top_destinations">TOP DESTINATIONS</string>
    <string name="nearby_attractions">Nearby Attractions</string>
    <string name="guide">Guide</string>
    <string name="might_need_these">Might need these</string>
    <string name="a_country_a_city_a_place_or_anything">A country, a city, a place... or anything</string>
    <string name="trip_plan">Trip Plan</string>
    <string name="description_media">Description Media</string>
    <string name="title">Title</string>
    <string name="description_text">Description Text</string>
    <string name="trips">Trips</string>
    <string name="bookmark">Bookmark</string>
    <string name="add_button">add_button</string>
    <string name="backbutton">backButton</string>
    <string name="expandbutton">expandButton</string>
    <string name="detail_title">Title</string>
    <string name="textview">TextView</string>
    <string name="add_bookmark">Add Bookmark</string>
    <string name="all_tab">All</string>
    <string name="flights_tab">Flights</string>
    <string name="hotels_tab">Hotels</string>
    <string name="transportation_tab">Transportation</string>
    <string name="top_pick_articles">Top-pick articles</string>
</resources>